== 0.3.96 2009-08-15

This release doesn't have any directly visible new features or bug fixes. But there are big
internal changes. This release has a new API for plugging in other programming languages.
You can read more about that here: http://groups.google.com/group/cukes/browse_thread/thread/b9db8bf1f3ec9708

This might break other tools that are using Cucumber's internal APIs. For example Spork broke and had to
be patched. Please upgrade to Spork 0.5.9 if you are using Spork.

=== New Features
* Ability to preload natural language in Spork's prefork. Rerun script/generate cucumber --spork to see how. (Aslak Hellesøy)
* Ability to control which DRb port is used via the --port flag or by setting CUCUMBER_DRB environment variable. (Chris Flipse)
* Upgrade Rails generator to use webrat 0.5.0. (Aslak Hellesøy)
* Upgrade Sinatra example to work with rack-test 0.4.1 and webrat 0.5.0. (Aslak Hellesøy)

=== Changed Features
* --strict will cause an exit code 1 for missing and pending (used to be for missing only). (Mads Buus)
* junit formatter doesn't report pending steps unless --strict is used. (Mads Buus)

== 0.3.95 2009-08-13

This release improves Webrat support for table-like HTML markup. Now you can easily turn the HTML
elements table, dl, ol and ul elements into a 2D array. This is particularly useful for comparing
data in your HTML with a Cucumber table using Cucumber::Ast::Table#diff!

This release also fixes several bugs related to --drb (Spork) and profiles (cucumber.yml)

=== Bug Fixes
* --guess will always prefer the longest regexp with no groups if they exist. 
* Prevent delays if a NoMethodError is raise in a step definition. Define a light #inspect in World. (#374 Aslak Hellesøy)
* Restore 'features' as the default feature running path. (#412 Ben Mabey)
* --drb degrades gracefully when no drb server is running and no formatter is provided. (#410 Ben Mabey)
* --language picked up from profiles again. (#409 Ben Mabey)